sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgShellSort:4: error: not found: value ecart
  while (ecart > 0) {
         ^