sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart = getNombreValeurs()
  while (ecart > 0) {
    
  }
}